@@ -1,4 +1,4 @@
-﻿--
+--
 -- @file        CUTS-create.sql
 --
 -- $Id$
